fix routes and a7
