# resources/views/layouts/header.blade.php
@@ -12,7 +12,7 @@
     <div class="header-container">
     <div class="header-info">
         <div class="logo">
-        <a href="{{ url('/auctions') }}" class="logo">
+        <a href="{{ url('/auction') }}" class="logo">
             <div class="logo-img">AP</div>
             <span>AuctionPeer</span>
         </a>
