# routes/web.php
@@ -28,12 +28,11 @@ Route::redirect('/', '/login');
 
 // Auctions
 Route::controller(AuctionController::class)->group(function () {
-    Route::get('/auctions', 'index')->name('auctions.index');
+    Route::get('/auction', 'index')->name('auctions.index');
     Route::get('/auction/create', 'create')->name('auctions.create');
     Route::post('/auction/store', 'store')->name('auction.store');
-    Route::get('/auctions/search', 'search')->name('search.results');
-    Route::get('/auctions/filter', 'filter')->name('auctions.filter');
-    Route::get('/auctions/{auction}', 'show')->name('auction.show');
+    Route::get('/auction/search', 'search')->name('search.results');
+    Route::get('/auction/{auction}', 'show')->name('auction.show');
     Route::get('/auction/{auction}/edit', 'edit')->name('auction.edit');
     Route::post('/auction/{auction}/edit', 'update')->name('auction.update');
     Route::get('/auction/{auction}/cancel', 'cancel')->name('auction.cancel');
@@ -66,6 +65,6 @@ Route::controller(UserController::class)->group(function () {
 });
 
 Route::controller(BidController::class)->group(function () {
-    Route::post('/auctions/{auction}/bids', 'store')->name('auctions.bids.store');
-    Route::get('/auctions/{auction}/bids', 'index')->name('auctions.bids.index');
+    Route::post('/auction/{auction}/bids', 'store')->name('auctions.bids.store');
+    Route::get('/auction/{auction}/bids', 'index')->name('auctions.bids.index');
 });
